<resources>
    <string name="app_name">BGLesson_android</string>
    <string name="btn_num_1">1</string>
    <string name="btn_num_2">2</string>
    <string name="btn_num_3">3</string>
    <string name="btn_num_4">4</string>
    <string name="btn_num_5">5</string>
    <string name="btn_num_6">6</string>
    <string name="btn_num_7">7</string>
    <string name="btn_num_8">8</string>
    <string name="btn_num_9">9</string>
    <string name="btn_num_0">0</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_comma">,</string>
    <string name="btn_dot">.</string>
    <string name="btn_mult">*</string>
    <string name="btn_divide">/</string>
    <string name="btn_equal">=</string>
    <string name="btn_procent">%</string>
    <string name="btn_ac">AC</string>
    <string name="edit_hint">Начните вычисления...</string>
    <string name="btn_posneg">+/-</string>
</resources>